fix(home): letterspacing

--- a/assets/styles/templates/layouts/_home.scss
+++ b/assets/styles/templates/layouts/_home.scss
@@ -167,7 +167,7 @@
         &--catchline {
             max-width: 90rem;
             line-height: 1.13em;
-            letter-spacing: -0.04rem;
+            letter-spacing: -0.14rem;
         }
 
         &--video {
